Fix overflow for mobile devices.

--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -25,6 +25,12 @@ html {
   height: 100%;
 }
 
+@media (max-width: 768px) {
+  html, body {
+    overflow-x: hidden;
+  }  
+}
+
 /* Navbar. */
 nav {
   text-transform: uppercase;
